--- a/clientFolder/force-app/main/default/aura/TestCmp/TestCmp.cmp
+++ b/clientFolder/force-app/main/default/aura/TestCmp/TestCmp.cmp
@@ -7,13 +7,9 @@
  * the associated button on the header is clicked.
 -->
 
-<aura:component implements="force:appHostable,flexipage:availableForAllPageTypes,force:hasRecordId,lightning:isUrlAddressable,forceCommunity:availableForAllPageTypes"
-                controller="AuraDealershipApex"
+<aura:component extensible = "true"
+           		controller="AuraDealershipApex"
                 access="global">
-	<p>Test Cmp!</p>
-    <aura:attribute name="urlAttr" type="String" default=":None" />
-    <aura:handler name="init" value="{!this}" action="{!c.getControllerCampUrl}" />
-    <!--<iframe src="{!v.urlAttr}" width="100%" height="500px;" frameBorder="0"/>
-	-->
-    <iframe src="{! 'https://mindful-unicorn-c1ht9r-dev-ed--c.visualforce.com/apex/campaignpage'}" width="100%" height="500px;" frameBorder="0"/>
+	
+    {!v.body}
 </aura:component>
