--- a/clientFolder/force-app/main/default/aura/homeHead/homeHead.cmp
+++ b/clientFolder/force-app/main/default/aura/homeHead/homeHead.cmp
@@ -1,5 +1,5 @@
 <aura:component >
-	<div style="background-color:black;margin:10px">
+	<div style="background-color:black;margin:10px;border-radius:10px">
         <p class="productHeader">This week's Featured Product</p>
         <h2 class="featuredProduct">Tesla Semitruck</h2>
     	<lightning:carousel title="Featured Product">
@@ -8,15 +8,13 @@
                                      description="The Tesla Semi's quad-motor, AWD system lets you go anywhere, towing anything you need with you."
                                      />
             <lightning:carouselImage src="https://www.tesla.com/sites/default/files/images/semi/semi-social.jpg" 
-                                     header="Performing on the Road."
+                                     header="Built for Speed."
                                      description="The Tesla Semi allows you to hit 60 MPH in as little as 20 seconds."
                                      />
             <lightning:carouselImage src="https://chargedevs.com/wp-content/uploads/2021/07/9f4b7fa8-c1ea-4eca-9c9b-f98ddd66996f-copy.jpg"
                                      header="Built to Last."
                                      description="The Semi's all-electric engine means no more stops at a gas station."
                                      />
-
-
         </lightning:carousel>
     </div>
 </aura:component>
