--- a/clientFolder/force-app/main/default/aura/homePage/homePage.css
+++ b/clientFolder/force-app/main/default/aura/homePage/homePage.css
@@ -1,12 +1,33 @@
-.THIS {
-    /*background-image: url(https://i.pinimg.com/originals/bd/98/95/bd98952d3b6ffac5877592f470fe6cf9.jpg);*/
+.THIS.body {
+    background-image: url(https://i.pinimg.com/originals/bd/98/95/bd98952d3b6ffac5877592f470fe6cf9.jpg);
+}
+
+.THIS .apptHeader {
+    border-bottom-style:solid;
+    border-color:black;
+    margin-left:auto;
+    margin-right:auto;
+    max-width: 300px;
+    font-size: 18px;
+    text-align:center;
+    align-content:center;
+    padding:4px;
+}
+
+.THIS .productHeader {
+    padding-top:7px;
 }
 
 .THIS #UserInfo {
-    font-size: 30px;
-    text-align:center;
-    padding:12px;
-    margin:10px;
-    background-color:black;
-    color:white;
+	border-bottom-style:solid;
+    border-top-style: solid;
+    border-color:black;
+    margin-left:auto;
+   	margin-right:auto;
+   	max-width: 500px;
+   	font-size: 40px;
+	text-align:center;
+   	align-content:center;
+    margin-bottom:33px;
+    margin-top:20px;
 }
