--- a/clientFolder/force-app/main/default/aura/items/items.css
+++ b/clientFolder/force-app/main/default/aura/items/items.css
@@ -1,17 +1,11 @@
-.THIS {
-    border: 10px;
-    padding: 2em;
-    margin: 10px;
-    background-color: #B0E0E6;
-    border-top: solid orange 3px;
-    border-radius: 0px 0px 10px 10px;
-    
+.THIS h3 {
+    color:white;
 }
 
-.THIS h1 {
-    font-size:30px;
+.THIS h2 {
+    color:black;
     font-weight:bold;
-    text-align:center;
+    font-size:20px;
 }
 
 .THIS .category {
@@ -19,12 +13,36 @@
     font-weight:bold;
 }
 
+.THIS .carTitle {
+    border-bottom-style:solid;
+    border-color:white;
+    margin-left:auto;
+    margin-right:auto;
+    max-width: 300px;
+   	font-size: 25px;
+ 	text-align:center;
+   	align-content:center;
+}
+
+.THIS .subtitle {
+    margin-left:auto;
+    margin-right:auto;
+    margin-top:4px;
+    margin-bottom:33px;
+    color:white;
+    font-size:15px;
+    align-content:center;
+    text-align:center;
+}
+
 .THIS .schedButton {
     margin: 10px;
+    color:black;
 }
 
 .THIS .prompt {
     padding:13px;
+    color:black;
 }
 
 .THIS .howmany {
@@ -35,4 +53,8 @@
     text-align:center;
     font-style:oblique;
     color:white;
+}
+
+.THIS .catalogueHolder {
+    max-width: 700px;
 }
