--- a/clientFolder/force-app/main/default/aura/AuraCampaign/AuraCampaign.css
+++ b/clientFolder/force-app/main/default/aura/AuraCampaign/AuraCampaign.css
@@ -17,3 +17,22 @@
   height: 30%;
   opacity: 0.8 !important;
 }
+
+.THIS .newheader1 {
+  font-size: 300%;
+  font-weight: bold;
+  text-align: center;
+}
+.THIS h1 {
+  border-bottom-style:solid;
+               border-top-style: solid;
+    		   border-color:black;
+    		   margin-left:auto;
+    		   margin-right:auto;
+   			   max-width: 500px;
+    		   font-size: 40px;
+			   text-align:center;
+    		   align-content:center;
+    		   margin-bottom:33px;
+               margin-top:20px
+}
