--- a/clientFolder/force-app/main/default/aura/JobApplication/JobApplication.cmp
+++ b/clientFolder/force-app/main/default/aura/JobApplication/JobApplication.cmp
@@ -7,48 +7,80 @@
     <aura:attribute name="reloadCandForm" type="boolean" default="true" />
     
     <div>
-        <h1 style="font-size:30px;text-align:center;font-weight:bold;">Careers</h1>
+        <h1 style="border-bottom-style:solid;
+                   border-top-style: solid;
+                   border-color:black;
+                   margin-left:auto;
+                   margin-right:auto;
+                   max-width: 500px;
+                   font-size: 40px;
+                   text-align:center;
+                   align-content:center;
+                   margin-bottom:33px;
+                   margin-top:20px">Careers</h1>
     </div>
-    <div class="slds-grid">       
-        <div class="slds-col slds-size_6-of-12">
-            <div>
-                <h2>Job Application</h2><br/>
-                <aura:if isTrue="{!v.reloadAppForm}">       
-                    <lightning:recordEditForm aura:id="recordEditForm"
-                                              objectApiName="Job_Application__c">
-                        <lightning:messages />                        
-                        <lightning:inputField fieldName="Candidate__c" value="{!v.formCandidate}" disabled="true"/>                
-                        <lightning:inputField fieldName="Position__c" />
-                        <lightning:button class="slds-m-top_small" type="submit" label="Create new" />
-                    </lightning:recordEditForm>
-                </aura:if>
+    <div class="slds-grid" >       
+        <div class="slds-col slds-gutters_x-small slds-size_6-of-12">
+            
+            <div style="max-width:110em;
+                        border-radius:16px;
+                        margin-left:auto;
+                        margin-right:auto;">
+                <div class="titleHolder">
+                    <h3>Job Application</h3>
+                    <div style="background-color:white">
+                        <aura:if isTrue="{!v.reloadAppForm}">       
+                            <lightning:recordEditForm aura:id="recordEditForm"
+                                                      objectApiName="Job_Application__c">
+                                <lightning:messages />                        
+                                <lightning:inputField fieldName="Candidate__c" value="{!v.formCandidate}" disabled="true"/>                
+                                <lightning:inputField fieldName="Position__c" />
+                                <lightning:button class="slds-m-top_small slds-align_absolute-center" type="submit" label="Apply" />
+                            </lightning:recordEditForm>
+                        </aura:if>
+                    </div>
+                </div>
             </div>
             <br/>
-            <div>
-                <c:PositionList />
+            <div style="max-width:110em;
+                        border-radius:16px;
+                        margin-left:auto;
+                        margin-right:auto;">
+                <div class="titleHolder">
+                    <h3>Open Positions</h3>
+                    <div style="background-color:white">
+                        <c:PositionList/>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="slds-col slds-size_1-of-12"/>        
-        <div class="slds-col slds-size_5-of-12">
-            <h2>Candidate Information</h2><br/>        
-            <lightning:recordEditForm
-                                      aura:id="f2"
-                                      objectApiName="Candidate__c"
-                                      onsubmit="{!c.candRecordSubmit}"
-                                      onsuccess="{!c.candRecordFormSuccess}"
-                                      >            
-                <lightning:inputField aura:id="FName" fieldName="First_Name__c"/>
-                <lightning:inputField fieldName="Last_Name__c"/>
-                <lightning:inputField fieldName="Phone__c"/>
-                <lightning:inputField fieldName="Street_Address_1__c"/>
-                <lightning:inputField fieldName="City__c"/>
-                <lightning:inputField fieldName="State_Province__c"/>
-                <lightning:inputField fieldName="Zip_Postal_Code__c"/>
-                <lightning:inputField fieldName="Country__c"/>
-                <lightning:inputField fieldName="Email__c"/>
-                <lightning:button class="slds-m-top_small" type="submit" label="Create new" />
-            </lightning:recordEditForm>       
-        </div>
-        
+        <div class="slds-col slds-size_5-of-12" style="max-width:110em;
+                                                       border-radius:16px;
+                                                       margin-left:auto;
+                                                       margin-right:auto;">
+            <div class="titleHolder">
+                <h3>Candidate Information</h3>
+                <div style="background-color:white">
+                    <lightning:recordEditForm
+                                              aura:id="f2"
+                                              objectApiName="Candidate__c"
+                                              onsubmit="{!c.candRecordSubmit}"
+                                              onsuccess="{!c.candRecordFormSuccess}"
+                                              class="white">            
+                        <lightning:inputField aura:id="FName" fieldName="First_Name__c"/>
+                        <lightning:inputField fieldName="Last_Name__c"/>
+                        <lightning:inputField fieldName="Phone__c"/>
+                        <lightning:inputField fieldName="Street_Address_1__c"/>
+                        <lightning:inputField fieldName="City__c"/>
+                        <lightning:inputField fieldName="State_Province__c"/>
+                        <lightning:inputField fieldName="Zip_Postal_Code__c"/>
+                        <lightning:inputField fieldName="Country__c"/>
+                        <lightning:inputField fieldName="Email__c"/>
+                        <lightning:button class="slds-m-top_small slds-align_absolute-center" type="submit" label="Create New Candidate Profile" />
+                    </lightning:recordEditForm> 
+                </div>
+            </div>
+        </div>       
     </div>
 </aura:component>
