--- a/clientFolder/force-app/main/default/aura/JobApplication/JobApplication.css
+++ b/clientFolder/force-app/main/default/aura/JobApplication/JobApplication.css
@@ -8,8 +8,17 @@
     border: 10px;
     padding: 2em;
     margin: 10px;
-    background-color: #B0E0E6;
-    border-top: solid orange 3px;
     border-radius: 0px 0px 10px 10px;
     
+}
+
+.THIS .titleHolder {
+    border-radius:5px;
+    margin: 15px;
+    background-color:black;
+}
+
+.THIS h3 {
+    color:white;
+    padding:4px;
 }
